==> aws/amazon-freertos/lib/ota/portable/nordic/nrf52840-dk/aws_ota_pal.c <==
#include <stdio.h>
#include <stdlib.h>
#include "FreeRTOS.h"
#include "aws_ota_agent.h"
#include "aws_ota_pal.h"
#include "aws_ota_agent_internal.h"
#include "aws_ota_pal_settings.h"
#include "aws_ota_codesigner_certificate.h"
#include "asn1utility.h"
#include "mbedtls/base64.h"
#include "nrf_mbr.h"
#include "nrf_sdm.h"
#include "nrf_nvmc.h"
#include "nrf_sdh_soc.h"
#include "nrf_crypto.h"
#include "event_groups.h"

OTA_Err_t prvPAL_CreateFileForRx( OTA_FileContext_t * const C )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_CreateFileForRx" );
    ret_code_t xErrCode;
    C->lFileHandle = prvNextFreeFileHandle;
    OTA_Err_t xStatus = kOTA_Err_None;
    /* Check that the second bank size is big enough to contain the new firmware */
    if( C->ulFileSize > otapalSECOND_BANK_SIZE )
    {
        xStatus = kOTA_Err_OutOfMemory;
    }
    if (xStatus == kOTA_Err_None){
        /* Create the event group for flash events */
        xFlashEventGrp = xEventGroupCreate();

        if( xFlashEventGrp == NULL )
        {
            OTA_LOG_L1( "[%s] No memory for creation of event group \n", OTA_METHOD_NAME );
            xStatus = kOTA_Err_OutOfMemory;
        }
    }
    if (xStatus == kOTA_Err_None){
        /* Erase the required memory */
        OTA_LOG_L1( "[%s] Erasing the flash memory \n", OTA_METHOD_NAME );
        xStatus = prvErasePages(otapalSECOND_BANK_START, otapalSECOND_BANK_END);
        if (xStatus != kOTA_Err_None) 
        {
             OTA_LOG_L1( "[%s] Erasing the flash memory failed with error_code %d\n", OTA_METHOD_NAME, xStatus );
        }
    }

    return xStatus;
}

OTA_Err_t prvPAL_Abort( OTA_FileContext_t * const C )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_Abort" );

    C->lFileHandle = ( int32_t ) NULL;
    /* Delete the event group */
    if( xFlashEventGrp != NULL )
    {
        vEventGroupDelete( xFlashEventGrp );
        xFlashEventGrp = NULL;
    }

    return kOTA_Err_None;
}

int16_t prvPAL_WriteBlock( OTA_FileContext_t * const C,
                           uint32_t ulOffset,
                           uint8_t * const pacData,
                           uint32_t ulBlockSize )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_WriteBlock" );

    /* We assume that the flash is already erased by this address (it should be, as we erase it in the
     * prvPAL_CreateFileForRx, but the second write to the same position can break this invariant.
     * Anyway, the OTA procedure must not try to write to the same addresses */
    ret_code_t xErrCode = prvWriteFlash( otapalSECOND_BANK_START + otapalDESCRIPTOR_SIZE + ulOffset, ulBlockSize, pacData );

    if( xErrCode == NRF_SUCCESS )
    {
        OTA_LOG_L1( "[%s] Write %ul bytes from the %ul address \n", OTA_METHOD_NAME, ulBlockSize, ulOffset );
        return ulBlockSize;
    }
    else
    {
        OTA_LOG_L1( "[%s] Write %ul bytes from the %ul address failed with error code %d\n", OTA_METHOD_NAME, ulBlockSize,
                    ulOffset, xErrCode );
        return -1;
    }
}

OTA_Err_t prvPAL_CloseFile( OTA_FileContext_t * const C )
{
    OTA_Err_t xError;
    ret_code_t xStatus;

    DEFINE_OTA_METHOD_NAME( "prvPAL_CloseFile" );

    OTA_LOG_L1( "[%s] Erasing the flash memory was successful\n", OTA_METHOD_NAME );

    /* Write the image descriptor */
    xStatus = prvPAL_WriteImageDescriptor( C );
    if(xStatus == NRF_SUCCESS)
    {
      /* Increment the file handler */
        prvNextFreeFileHandle += 1;

        xError = prvPAL_CheckFileSignature( C );
    }else
    {
        xError = kOTA_Err_SignatureCheckFailed;
    }

    return xError;
}

static OTA_Err_t prvPAL_CheckFileSignature( OTA_FileContext_t * const C )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_CheckFileSignature" );

    nrf_crypto_hash_sha256_digest_t xHash;
    size_t ulHashLength = sizeof( xHash );
    ret_code_t xErrCode = NRF_SUCCESS;
    uint32_t ulCertificateSize = 0;
    uint8_t *pusCertificate = prvPAL_ReadAndAssumeCertificate (NULL, &ulCertificateSize);
    if (pusCertificate == NULL) {
        xErrCode = NRF_ERROR_INTERNAL;
    }
    if (xErrCode == NRF_SUCCESS) {
        prvComputeSHA256Hash( (uint8_t *)otapalSECOND_BANK_START + otapalDESCRIPTOR_SIZE, C->ulFileSize, &xHash, &ulHashLength );
        xErrCode = prvVerifySignature( (uint8_t*) &xHash, ulHashLength, C->pxSignature->ucData, C->pxSignature->usSize, pusCertificate, ulCertificateSize );
        vPortFree( pusCertificate );        
    }

    if( xErrCode != NRF_SUCCESS )
    {
        OTA_LOG_L1( "[%s] Signature check failed \n", OTA_METHOD_NAME );
        return kOTA_Err_SignatureCheckFailed;
    }

    OTA_LOG_L1( "[%s] Signature check passed \n", OTA_METHOD_NAME );
    return kOTA_Err_None;
}

static uint8_t * prvPAL_ReadAndAssumeCertificate( const uint8_t * const pucCertName,
                                                  uint32_t * const ulSignerCertSize )
{
    uint8_t * pucPublicKey;

    DEFINE_OTA_METHOD_NAME( "prvPAL_ReadAndAssumeCertificate" );
    * ulSignerCertSize = sizeof(signingcredentialSIGNING_CERTIFICATE_PEM);
    /* Skip the "BEGIN CERTIFICATE" */
    uint8_t* pucCertBegin = strstr (signingcredentialSIGNING_CERTIFICATE_PEM, pcOTA_PAL_CERT_BEGIN) ;
    if (pucCertBegin == NULL)
    {
        return NULL;
    }
    pucCertBegin += sizeof(pcOTA_PAL_CERT_BEGIN);
    /* Skip the "END CERTIFICATE" */
    uint8_t* pucCertEnd = strstr(pucCertBegin, pcOTA_PAL_CERT_END);
    if (pucCertEnd == NULL)
    {
        return NULL;
    }
    uint8_t *pucDecodedCertificate;
    size_t ulDecodedCertificateSize;
    mbedtls_base64_decode(pucDecodedCertificate, 0, &ulDecodedCertificateSize, pucCertBegin, pucCertEnd - pucCertBegin);
    pucDecodedCertificate = (char*) pvPortMalloc(ulDecodedCertificateSize);
    if (pucDecodedCertificate == NULL) 
    {
        return NULL;
    }    
    mbedtls_base64_decode(pucDecodedCertificate, ulDecodedCertificateSize, &ulDecodedCertificateSize, pucCertBegin, pucCertEnd - pucCertBegin);
    /* Find the tag of the ECDSA public signature*/
    uint8_t * pucPublicKeyStart = pucDecodedCertificate;
    while (pucPublicKeyStart < pucDecodedCertificate + ulDecodedCertificateSize ) 
    {
        if (memcmp(pucPublicKeyStart, pcOTA_PAL_ASN_1_ECDSA_TAG, sizeof(pcOTA_PAL_ASN_1_ECDSA_TAG) - 1) == 0)
        {
            break;
        }
        pucPublicKeyStart ++;
    }

    if (pucPublicKeyStart == pucPublicKeyStart + ulDecodedCertificateSize) {
        vPortFree(pucDecodedCertificate);
        return NULL;
    }
    pucPublicKeyStart -= 4; 
    * ulSignerCertSize = pucPublicKeyStart[1] + 2;
    vPortFree(pucDecodedCertificate);
    pucPublicKey = pvPortMalloc(* ulSignerCertSize);
    if( pucPublicKey != NULL)
    {
        memcpy(pucPublicKey, pucPublicKeyStart, * ulSignerCertSize);
    }
    return pucPublicKey;
}

OTA_Err_t prvPAL_ResetDevice( void )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_ResetDevice" );
    NVIC_SystemReset();
    return kOTA_Err_ResetNotSupported;
}

OTA_Err_t prvPAL_ActivateNewImage( void )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_ActivateNewImage" );

    /* FIX ME. */
    prvPAL_ResetDevice();
    return kOTA_Err_Uninitialized;
}

OTA_Err_t prvPAL_SetPlatformImageState( OTA_ImageState_t eState )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_SetPlatformImageState" );
    OTA_Err_t xStatus = kOTA_Err_None;
    if (xFlashEventGrp == NULL){
        /* Create the event group for flash events */
        xFlashEventGrp = xEventGroupCreate();

        if( xFlashEventGrp == NULL )
        {
            OTA_LOG_L1( "[%s] No memory for creation of event group \n", OTA_METHOD_NAME );
            xStatus = kOTA_Err_OutOfMemory;
        }
    }
    /* Read the old image */
    /* Right now we always boot from the first bank */
    /* TODO: Support boot from the second bank */
    ImageDescriptor_t * old_descriptor = ( ImageDescriptor_t * ) ( otapalFIRST_BANK_START );
    ImageDescriptor_t new_descriptor;
    /* Check if the correct image is located at the beginning of the bank */
    if ((memcmp(old_descriptor->pMagick, pcOTA_PAL_Magick, otapalMAGICK_SIZE) != 0)&&(eState == eOTA_ImageState_Accepted)) {
        xStatus = kOTA_Err_CommitFailed;
    }
    if (xStatus == kOTA_Err_None){
        memcpy(&new_descriptor, old_descriptor, sizeof(new_descriptor));
        switch (eState) {
        case eOTA_ImageState_Accepted:
            if (old_descriptor->usImageFlags == otapalIMAGE_FLAG_COMMIT_PENDING)
            {
                new_descriptor.usImageFlags = otapalIMAGE_FLAG_VALID;
            }
            else
            {
                new_descriptor.usImageFlags = otapalIMAGE_FLAG_INVALID;
            }

            break;
        case eOTA_ImageState_Rejected:
        case eOTA_ImageState_Aborted:
            if (old_descriptor->usImageFlags == otapalIMAGE_FLAG_COMMIT_PENDING)
            {
                new_descriptor.usImageFlags = otapalIMAGE_FLAG_INVALID;
            }
            break;
        case eOTA_ImageState_Testing:
            break;
        default:
            xStatus = kOTA_Err_BadImageState;
            break;
        }
    }

    if ( xStatus == kOTA_Err_None )
    {
        /* We don't wont to do anything with flash if it would leave it in the same state as it were */
        if ((new_descriptor.usImageFlags != old_descriptor->usImageFlags)&&(eState != eOTA_ImageState_Testing))
        {
            xStatus = prvErasePages(otapalFIRST_BANK_START, otapalFIRST_BANK_START + otapalDESCRIPTOR_SIZE);
            if(xStatus == kOTA_Err_None)
            {
                xStatus = prvWriteFlash(otapalFIRST_BANK_START, sizeof(new_descriptor), (uint8_t *)&new_descriptor);
            }
        }
    }
    return xStatus;
}

OTA_PAL_ImageState_t prvPAL_GetPlatformImageState( void )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_GetPlatformImageState" );

    OTA_PAL_ImageState_t xImageState = eOTA_PAL_ImageState_Invalid;

    ImageDescriptor_t * descriptor = ( ImageDescriptor_t * ) ( otapalFIRST_BANK_START );

    switch( descriptor->usImageFlags )
    {
        case otapalIMAGE_FLAG_COMMIT_PENDING:
            xImageState = eOTA_PAL_ImageState_PendingCommit;
            break;

        case otapalIMAGE_FLAG_VALID:
            xImageState = eOTA_PAL_ImageState_Valid;
            break;

        case otapalIMAGE_FLAG_INVALID:
            xImageState = eOTA_PAL_ImageState_Invalid;
            break;
    }

    return xImageState;
}
